--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-client": "^1.9.2",
     "graphql-anywhere": "^3.1.0",
     "graphql-tag": "^2.4.2",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-apollo": "^1.4.15",
