--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "devDependencies": {
     "apollo-test-utils": "^0.3.2",
+    "enzyme": "^3.1.0",
+    "enzyme-to-json": "^3.1.4",
     "eslint": "^4.7.1",
+    "flow": "^0.2.3",
     "graphql": "^0.11.3",
     "graphql-tools": "^1.2.2"
   }
