--- a/package.json
+++ b/package.json
@@ -1,28 +1,47 @@
 {
-  "name": "charter-challenge",
-  "version": "0.1.0",
+  "name": "greenfield",
+  "version": "1.8.0",
   "private": true,
   "dependencies": {
-    "apollo-client": "^1.9.2",
-    "graphql-anywhere": "^3.1.0",
-    "graphql-tag": "^2.4.2",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-apollo": "^1.4.15",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
-    "recompose": "^0.25.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "apollo-cache-inmemory": "^1.0.0",
+    "apollo-client": "^2.0.1",
+    "apollo-client-preset": "^1.0.1",
+    "apollo-link-context": "^1.0.0",
+    "apollo-link-http": "^1.1.0",
+    "axios": "^0.17.0",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
+    "history": "4.7.2",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-data-structures": "^0.1.6",
+    "redux-first-router": "1.9.19",
+    "redux-first-router-link": "^1.4.1",
+    "redux-saga": "0.16.0",
+    "styled-components": "2.2.3"
   },
   "devDependencies": {
-    "apollo-test-utils": "^0.3.2",
-    "eslint": "^4.7.1",
-    "graphql": "^0.11.3",
-    "graphql-tools": "^1.2.2"
+    "react-scripts": "1.0.16",
+    "redux-devtools-extension": "^2.13.2",
+    "standard": "^10.0.3"
+  },
+  "scripts": {
+    "start": "NODE_PATH=src/ react-scripts start",
+    "build": "NODE_PATH=src/ react-scripts build",
+    "test": "NODE_PATH=src/ react-scripts test --env=jsdom",
+    "coverage": "yarn test -- --coverage",
+    "lint": "standard --fix || true"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!node_modules/",
+      "!src/state/store.js",
+      "!src/state/sagas/*",
+      "!src/index.js"
+    ]
   }
 }
