--- a/package.json
+++ b/package.json
@@ -5,24 +5,32 @@
   "dependencies": {
     "apollo-client": "^1.9.2",
     "graphql-anywhere": "^3.1.0",
+    "graphql-lodash": "^1.3.2",
     "graphql-tag": "^2.4.2",
+    "material-ui": "^0.19.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-apollo": "^1.4.15",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "react-scripts": "1.0.13",
-    "recompose": "^0.25.0"
+    "recompose": "^0.25.0",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer build/static/js/main.*"
   },
   "devDependencies": {
     "apollo-test-utils": "^0.3.2",
     "eslint": "^4.7.1",
     "graphql": "^0.11.3",
-    "graphql-tools": "^1.2.2"
+    "graphql-tools": "^1.2.2",
+    "serve": "^6.4.1",
+    "source-map-explorer": "^1.5.0"
   }
 }
