--- a/package.json
+++ b/package.json
@@ -6,23 +6,34 @@
     "apollo-client": "^1.9.2",
     "graphql-anywhere": "^3.1.0",
     "graphql-tag": "^2.4.2",
+    "moment": "^2.19.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-apollo": "^1.4.15",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13",
-    "recompose": "^0.25.0"
+    "recompose": "^0.25.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.76.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src"
   },
   "devDependencies": {
     "apollo-test-utils": "^0.3.2",
-    "eslint": "^4.7.1",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-prettier": "^2.7.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.4.0",
     "graphql": "^0.11.3",
-    "graphql-tools": "^1.2.2"
+    "graphql-tools": "^1.2.2",
+    "prettier": "^1.8.2"
   }
 }
